--- a/desainmember.css
+++ b/desainmember.css
@@ -1,27 +1,38 @@
+header {
+  color:white;
+  text-align: center;
+  padding:1px;
+  background-color:#f44336;
+}
 body {
     background-color: #f8b195;
   }
-  h1 {
+  h2{
     text-align:center;
     color:#f44336;
+  }
+  h4, a {
+    color: white;
+    text-decoration: none;
+  }
+  a:hover {
+    color:#fab8b3;
+    text-decoration: none;
+  }
+  a:active{
+    color:#e97b73;
+    text-decoration: none;
   }
   p {
     color: black;
     text-align: center;
-  }
-  div {
-    width: 96%;
-    border: 5px solid #ff9d77;
-    padding: 15px;
-    margin: 10px;
-    background-color: #faad8e;
   }
   table {
       border: solid 1pt #ff9d77;
       background-color: #faad8e;
       border-collapse: collapse;
       text-align: center;
-      font-size: 20px;
+      font-size: 17px;
   }
   th {
     border: solid 1pt black;
@@ -35,4 +46,11 @@ body {
 tbody tr:hover {
   background-color: #f7a17f;
   color:white;
+}
+footer{
+  color:white;
+  text-align: center;
+  padding:10px;
+  font-size: 15px;
+  background-color:#f44336;
 }
