--- a/desainpendaftaran.css
+++ b/desainpendaftaran.css
@@ -1,19 +1,43 @@
+header {
+  color:white;
+  text-align: center;
+  padding:1px;
+  background-color:#f44336;
+}
 body {
     background-color: #f8b195;
   }
-  h1 {
+  h2 {
     text-align:center;
     color:#f44336;
   }
+  h4, a {
+    color: white;
+    text-decoration: none;
+  }
+  a:hover {
+    color:#fab8b3;
+    text-decoration: none;
+  }
+  a:active{
+    color:#e97b73;
+    text-decoration: none;
+  }
   p {
     color: black;
-    font-size: 20px;
-
   }
-  div {
+ form {
     width: 96%;
     border: 5px solid #ff9d77;
     padding: 15px;
     margin: 10px;
     background-color: #faad8e;
+    font-size: 17px;
+  }
+  footer{
+    color:white;
+    text-align: center;
+    padding:10px;
+    font-size: 15px;
+    background-color:#f44336;
   }
