--- a/desainmember.css
+++ b/desainmember.css
@@ -1,27 +1,30 @@
+header {
+  color: white;
+  background-color:#f44336;
+  padding:1px;
+  text-align: center;
+  font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+}
 body {
     background-color: #f8b195;
   }
-  h1 {
+  h2 {
     text-align:center;
     color:#f44336;
+    font-family: cursive;
   }
   p {
     color: black;
     text-align: center;
-  }
-  div {
-    width: 96%;
-    border: 5px solid #ff9d77;
-    padding: 15px;
-    margin: 10px;
-    background-color: #faad8e;
+    font-family: cursive;
   }
   table {
       border: solid 1pt #ff9d77;
       background-color: #faad8e;
       border-collapse: collapse;
       text-align: center;
-      font-size: 20px;
+      font-size: 17px;
+      font-family: cursive;
   }
   th {
     border: solid 1pt black;
@@ -35,4 +38,21 @@ body {
 tbody tr:hover {
   background-color: #f7a17f;
   color:white;
+}
+a,href {
+  color:white;
+  text-decoration: none;
+}
+a:hover {
+  color:#ff9088;
+}
+a:active {
+  color: #ff746b;
+}
+footer {
+  padding:5px;
+  background-color:#f44336;
+  color:white;
+  text-align: center;
+  font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
 }
