--- a/desainpendaftaran.css
+++ b/desainpendaftaran.css
@@ -1,14 +1,20 @@
+header {
+  color: white;
+  background-color:#f44336;
+  padding:1px;
+  text-align: center;
+  font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+}
 body {
     background-color: #f8b195;
   }
-  h1 {
+  h2 {
     text-align:center;
     color:#f44336;
+    font-family: cursive;
   }
   p {
     color: black;
-    font-size: 20px;
-
   }
   div {
     width: 96%;
@@ -16,4 +22,23 @@ body {
     padding: 15px;
     margin: 10px;
     background-color: #faad8e;
+    font: 17;
+    font-family: cursive;
+  }
+  a,href {
+    color:white;
+    text-decoration: none;
+  }
+  a:hover {
+    color:#ff9088;
+  }
+  a:active {
+    color: #ff746b;
+  }
+  footer {
+    padding:5px;
+    background-color:#f44336;
+    color:white;
+    text-align: center;
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
   }
